# vscode-escript

native/: CMakeLists.txt
native/pol/: CMakeLists.txt
native/pol/cmake/: Antlr.cmake  Boost.cmake  Curl.cmake  Fmt.cmake  compile_defs.cmake  init.cmake
native/pol/pol-core/clib/: CMakeLists.txt
